--- a/libs/liblist/CMakeLists.txt
+++ b/libs/liblist/CMakeLists.txt
@@ -1,11 +1,8 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.23.0)
 
 project(linkedlist VERSION 1.0)
 
-add_library(linkedlist linked_list.c)
+add_library(${PROJECT_NAME} STATIC
+    linked_list.c)
 
-target_include_directories(linkedlist PUBLIC linke_list.h)
-
-set(CMAKE_C_STANDARD 17)
-set(CMAKE_C_STANDARD_REQUIRED True)
-
+target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR})
