Auto stash before merge of "devel" and "master"

--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,12 @@
 *.vscode
 vscode*
 *.code-workspace
-.cache
 vgcore*
 
+#clangd
 compile_commands.json
 .clangd
+!*.[Cc]ache/**
 
 #project
 build
